- placement key only available on non prepared statement on Execute()
- placement key can be construct with PlacementKey.From()
- IPartitioner is a new interface allowing pluggin custom partitioner (see ClusterConfig.Partitioner)
- MurmurHash3, Random and Null (default) partitioners are available
- fixed utf8 string deserialization

version 3.2.2
- fixed issue 49 (https://github.com/pchalamet/cassandra-sharp/issues/49)
- fixed issue 52 (https://github.com/pchalamet/cassandra-sharp/issues/52)
- fixed issue 53 (https://github.com/pchalamet/cassandra-sharp/issues/53)

version 3.2.1
NOT RELEASED
- added releaseNotes to nuget packages

version 3.2.0
- use culture invariant for identifier conversion
- ICqlCommand.Execute & IPreparedQuery.Execute with all parameters are depreacated. Use fluent interface instead
- timeout support for AsFuture()
- fluent interface for queries (introduced ICqlQuery) to allow setting CL, execution flags & hints
  These methods will be removed in 3.3
- fluent interface for building commands
- data transfer tool available in cqlplus (DbCopy) from database (OLEDB) to Cassandra
- no more semicolon at the end of cqlplus command
- ordinal data mapper availability
- refactoring of query commands

version 3.1.4
- split cassandra-sharp in 3 NuGet packages: cassandra-sharp (main), cassandra-sharp-interfaces & cassandra-sharp-core

version 3.1.3
- reference on cassandra-sharp should reference automatically CassandraSharp.dll

version 3.1.2
- reference on cassandra-sharp should reference automatically CassandrSharp.Interfaces.dll

version 3.1.1
- fixed deserialization of key for map

version 3.1.0
- moved interface to separate assemblies (avoid Rx dependencies & just update the implementation without rebuilding)
- moved tools and interfaces to separate nuget packages
- revised the build process, using Version.xml to describe versions instead of command line
- renamed GenerateVersion.cmd to Build.cmd
- renamed PublishNugetVersion.cmd to Publish.cmd
