@@ -18,6 +18,7 @@
 - IPartitioner is a new interface allowing pluggin custom partitioner (see ClusterConfig.Partitioner)
 - MurmurHash3, Random and Null (default) partitioners are available
 - fixed utf8 string deserialization
+- fixed issue 59 (https://github.com/pchalamet/cassandra-sharp/issues/59) - release of prepared query is now possible
 
 version 3.2.2
 - fixed issue 49 (https://github.com/pchalamet/cassandra-sharp/issues/49)
